# eval-hub-sdk

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: commitlint.yml  pre-commit.yml  publish-pypi.yml  publish-testpypi.yml  test.yml
examples/: client_usage.py
src/evalhub/: __init__.py
src/evalhub/adapter/: __init__.py  callbacks.py
src/evalhub/adapter/models/: __init__.py  cards.py  job.py
src/evalhub/adapter/oci/: __init__.py  persister.py
src/evalhub/cli/: __init__.py  client.py  completion.py  config.py  main.py
src/evalhub/client/: __init__.py
src/evalhub/client/resources/: jobs.py
src/evalhub/models/: __init__.py  api.py
tests/e2e/: test_persist.py  test_smoke_test_eval_hub_server.py
tests/unit/: test_adapter_models.py  test_cli_client.py  test_cli_completion.py  test_cli_config.py  test_cli_eval.py  test_evalhub_client.py  test_models_api.py
